# holographic-horizon-shield-v2

./: .gitignore  1. shield_core.py → (Root – Refactor for modularity)  Adversarial Prompt Simulation  Assets Folder  Automated Adversarial Testing  CODE_OF_CONDUCT.md  Client.py  Config.json  Contributing.md  Dockerfile  Enhanced README.md  FUNDING.yml  Geometric_engine.py  Implement Multi-Dimensional Vector Array Matrix for Spatial Boundary Scans  LICENSE  LICENSE (root level) – Standard MIT License  Makefile  Quick Win: Add a requirements.txt File  README.md  Red_team_mode.py  Requirements.Txt  Shield.py  Shield_V2_dashboard.PY  Shield_cloaking.py  Shield_v2_Prototype.PY  Simulate Adversarial Prompts  app.py  architecture.md  docker-compose.yml  entropy_layer.py  evolving_geometry.py  fix_layers_import.py  guardrails.py  layers” folder – Future Entropy Layer prototype)  migrate_entropy_layer.py  output_filter.py  pyproject.toml  requirements .txt  requirements.txt  requirements.txt → root level  (+12 more)
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
.github/workflows/.github/Workflows/: Python-testing.yml
layers/: pii_layer.py —  toxicity_layer.py
src/holographic_horizon_shield/: __init__.py  api.py
src/holographic_horizon_shield/ src/holographic_horizon_shield/shield/: black_hole_engine.py
src/holographic_horizon_shield/core/: shield.py
src/holographic_horizon_shield/layers/: entropy_layer.py
