[project]
name = "holographic-horizon-shield"
version = "2.1.0"
description = "Living Holographic Geometric Defense for LLMs"
readme = "README.md"
license = {text = "GPL-3.0"}
requires-python = ">=3.10"
authors = [{name = "Jade Siley-Winditt"}]

dependencies = [
    "streamlit",
    "torch",
    "transformers",
    "detoxify",
]

[project.optional-dependencies]
dev = ["pytest", "ruff", "black", "pytest-cov"]

[tool.setuptools.packages.find]
where = ["."]
include = ["holographic_horizon_shield*"]

[project.scripts]
hhs-dashboard = "shield_v2_dashboard:main"   # adjust if needed
